--- a/app/views/admin/souvenirs/edit.html.erb
+++ b/app/views/admin/souvenirs/edit.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Souvenirs#edit</h1>
-<p>Find me in app/views/admin/souvenirs/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10">
+      <h2 class="text-center m-3"><%= @souvenir.souvenir_name %>編集</h2>
+      <div class="text-right">
+        <%= link_to "戻る", admin_souvenir_path, class: "btn btn-outline-secondary" %>
+      </div>
+
+      <%= form_with model: @souvenir, url: souvenirs_path do |f| %>
+      <div class="col-12 m-3">
+          <table class="table table-border">
+            <tbody>
+              <tr>
+                <td class="col-3 text-center">ミヤゲ名</td>
+                <td><%= f.text_field :souvenir_name, autofocus: true, class: "form-control" %></td>
+              </tr>
+              <tr>
+                <td class="col-3 text-center">写真</td>
+                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %></td>
+              </tr>
+              <tr>
+                <td class="col-3 text-center">県名</td>
+                <td><%= f.collection_select :prefecture_id, Prefecture.all, :id, :prefecture_name, {prompt: "選択してください"}, class: "form-control", :id => "prefecture_id" %></td>
+              </tr>
+              <tr>
+                <td class="col-3 text-center">紹介文</td>
+                <td><%= f.text_area :introduction, class: "form-control", rows: "4" %></td>
+              </tr>
+              <tr>
+                <td class="col-3 text-center">カテゴリー</td>
+                <td><%= f.radio_button :category, "food" %>
+                    <%= f.label :category_food, "食品" %></br>
+                    <%= f.radio_button :category, "goods" %>
+                    <%= f.label :category_godds, "グッズ" %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="text-center">
+        <%= f.submit "登録", class: "btn btn-success px-5" %>
+        </div>
+        <% end %>
+    </div>
+  </div>
+</div>
