--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-
+      <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
     <div class="col-8 offset-1 pt-5">
@@ -9,7 +9,7 @@
       <div class="text-right">
         <%= link_to "戻る", souvenir_review_path(@souvenir, @review), class: "btn btn-outline-secondary" %>
       </div>
-      
+
       <%= form_with model: @review, url: souvenir_review_path, method: :patch do |f| %>
       <table class="table m-3">
         <tbody>
@@ -66,7 +66,7 @@
         </tbody>
       </table>
       <% end %>
-      
+
     </div>
   </div>
 </div>
