--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -1,11 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-
+			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h2 class="text-center mb-5">ミヤゲ一覧</h2>
+    	<div class="mb-5">
+        <h2 class="text-center">ミヤゲ一覧</h2>
+        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+      </div>
+      <div class ="m-3 text-right">
+        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+      </div>
 
       <div class="row">
         <% @souvenirs.each do |souvenir| %>
