--- a/app/views/public/users/review.html.erb
+++ b/app/views/public/users/review.html.erb
@@ -1,11 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-
+      <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
     <div class="col-8 offset-1 pt-5">
       <h2 class="mb-5"><%= current_user.nickname %>さんのレビュー一覧</h2>
+      <div class ="m-3 text-right">
+        <%= link_to "戻る", user_path, class: "btn btn-outline-secondary" %>
+      </div>
       <div class="row">
         <% @user.reviews.each do |review| %>
         <div class="card-deck col-4 mx-auto mb-3">
