--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-2">
-
-
+    <div class="col-3">
+      <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-6 offset-1 pt-5">
+    <div class="col-5 offset-1 pt-5">
       <h1>マイページ</h1>
       <table class="table">
         <tbody>
