--- a/app/views/public/souvenirs/search_souvenir.html.erb
+++ b/app/views/public/souvenirs/search_souvenir.html.erb
@@ -6,6 +6,7 @@
 
     <div class="col-8 offset-1 pt-5">
     	<div class="mb-5">
+    	<% if @souvenirs.present? %>
         <h2 class="text-center"><%= @q.souvenir_name_cont %> の検索結果</h2>
         <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
@@ -32,6 +33,11 @@
 		    </div>
 		    <% end %>
 	    </div>
+	    <% else %>
+	      <h2 class="text-center"><%= @q.souvenir_name_cont %> の検索結果</h2>
+        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+        <h3 class="text-center">一致する結果がありませんでした。</h3>
+      <% end %>
     </div>
   </div>
 </div>
