--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,16 +54,12 @@
               <% end %>
               </ul>
             </div>
-            <!-----------------------検索窓--------------------------->
             <div class="form-group mt-2 ml-auto">
-              <%= search_form_for @q, url: search_souvenirs_path do |f| %>
-                <%= f.search_field :souvenir_name_cont, placeholder: "ミヤゲ名を検索", required: true %>
-                <button class="btn btn-outline-success" type="submit">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
+              <%= form_with url:root_path, method: :get, local: :true do |f| %>
+                <%= f.text_field :word, placeholder: "ミヤゲ名を入力"  %>
+                <%= f.submit "検索", class: "btn btn-outline-dark" %>
               <% end %>
             </div>
-            <!-----------------------検索窓--------------------------->
           </div>
         </div>
       </nav>
