--- a/app/views/public/souvenirs/search_souvenir.html.erb
+++ b/app/views/public/souvenirs/search_souvenir.html.erb
@@ -26,7 +26,7 @@
 				      <p class="card-subtitle m-2">ほしい！：<%= souvenir.wants.count %> 件<br>
 				                               レビュー：<%= souvenir.reviews.count %> 件</p>
 				      <p class="card-text mt-3"><%= souvenir.introduction.truncate(30) %></p>
-				      <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------>
+				      <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------->
             </div>
 			    </div>
 			  <% end %>
