--- a/app/views/public/reviews/new.html.erb
+++ b/app/views/public/reviews/new.html.erb
@@ -7,7 +7,7 @@
     <div class="col-8 offset-1 pt-5">
       <h2 class="m-3"><%= @souvenir.souvenir_name %>のレビュー新規登録</h2>
       <div class="text-right">
-        <%= link_to "戻る", souvenir_path(@souvenir), class: "btn btn-outline-secondary" %>
+        <%= link_to "戻る", souvenir_path(@souvenir), class: "btn btn-outline-secondary", data: {"turbolinks" => false} %>
       </div>
       <%= form_with model: @review, url: souvenir_reviews_path do |f| %>
       <table class="table m-3">
@@ -40,12 +40,9 @@
           </tr>
           <tr>
             <th class="text-center align-middle">相手は？</th>
+
             <td><%= f.label :tag_list, "半角の「,」を入力することで複数のタグをつけられます。", class: "form-label" %>
                 <%= f.text_field :tag_list, value: @review.tag_list.join("、"), class: "form-control" %></td>
-
-
-                
-
 
 
             <td></td>
@@ -57,13 +54,30 @@
           </tr>
           <tr>
             <th class="text-center align-middle">星評価</th>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
+            <td>
+              <div id="star">
+                <%= f.hidden_field :star, id: :review_star %>
+              </div>
+                <script>
+                  $(document).on('turbolinks:load', function() {
+                    let elem = document.querySelector('#star');
+                    let opt = {
+                      starOn: "<%= asset_path('star-on.png') %>",
+                      starOff: "<%= asset_path('star-off.png') %>",
+                      starHalf: "<%= asset_path('star-half.png') %>",
+                      half: true,
+                      scoreName: 'review[star]'
+                    };
+                    window.raty(elem, opt);
+                  });
+                </script>
+            </td>
             <td></td>
           </tr>
         </tbody>
       </table>
       <div class="my-3 text-center">
-        <%= f.submit "投稿する", class: "btn btn-success" %>
+        <%= f.submit "投稿する", class: "btn btn-success", data: {"turbolinks" => false} %>
       </div>
       <% end %>
 
