--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -23,17 +23,8 @@
 				      <h4 class="card-title"><%= souvenir.souvenir_name %></h4>
 				      <h6 class="card-subtitle m-2"><%= souvenir.prefecture.prefecture_name %></h6>
 				      <p class="card-subtitle m-2">ほしい！：<%= souvenir.wants.count %> 件<br>
-				                               レビュー：<%= souvenir.reviews.count %> 件</p>
-				      
-				      
-				      <p class="card-subtitle m-2">
-				                                          <% @tags.each do |tag| %>
-				                                          <%= tag %>
-				                                          <% end %></p>
-				      
-				      
-				      
-				      
+				                               		 レビュー：<%= souvenir.reviews.count %> 件</p>
+				      <p class="card-subtitle m-2"><%= render "average_star", souvenir: souvenir %></p>
 				      <p class="card-text mt-3"><%= souvenir.introduction.truncate(30) %></p>
 				      <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------>
             </div>
