--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -69,7 +69,7 @@
               </tr>
               <tr>
                 <td class="col-3 text-center">平均評価</td>
-                <td>⭐️⭐️⭐️☆☆</td>
+                <td><%= render "average_star", souvenir: @souvenir %></td>
               </tr>
             </tbody>
           </table>
