--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -6,16 +6,15 @@
 
     <div class="col-8 offset-1 pt-5">
       <h2 class="text-center"><%= @souvenir.souvenir_name %>の詳細</h2>
-      <div class="text-center m-3">
-        <% if user_signed_in? %>
-          <%= link_to "レビューする",  new_souvenir_review_path(@souvenir), class: "btn btn-outline-success mr-5" %>
-          <% if @souvenir.wanted_by?(current_user) %>
-            <%= link_to "ほしい！をやめる", souvenir_wants_path(@souvenir), method: :delete, class: "btn btn-outline-info mr-5" %>
-          <% else %>
-            <%= link_to "ほしい！", souvenir_wants_path(@souvenir), method: :post, class: "btn btn-outline-warning mr-5" %>
+      <div class="m-3">
+        <div class="d-flex justify-content-center">
+          <% if user_signed_in? %>
+            <%= link_to "レビューする",  new_souvenir_review_path(@souvenir), class: "btn btn-outline-success mr-5" %>
+            <div id="want_btn_<%= @souvenir.id %>">
+              <%= render "want", souvenir: @souvenir %></div>
+            </div>
           <% end %>
-        <% end %>
-        <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary float-right" %>
       </div>
       <div class="row mt-5">
         <div class="col-4">
@@ -57,9 +56,6 @@
                         <%= link_to "#{tag}(#{tag.taggings_count})",  search_tags_path, class: "text-white" %>
                       </span>
                     <% end %>
-
-
-
 
                 </td>
 
