--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -46,11 +46,20 @@
               </tr>
               <tr>
                 <td class="text-center">誰に？</td>
-                <td><% @tags.each do |tag| %>
-                      <span class="badge badge-info mr-2">
-                        <%= link_to "#{tag}(#{tag.taggings_count})", search_tags_path(tag_name: tag), class: "text-white" %>
-                      </span>
+                <td>
+
+                    <% @review.tags.each do |tag| %>
+                    <span><%= link_to tag.tag_name, search_tags_path(tag_id: tag.id), class: "btn btn-outline-info" %>
+                    </span>
                     <% end %>
+
+
+
+
+
+
+
+
                 </td>
               </tr>
               <tr>
