--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,20 +19,31 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="new_arrival">
-          新着レビュー表示
 
+        <div class="m-3">
+          <h3 class="m-3">新着レビュー</h3>
         </div>
-      </div>
-
+        <div class="row mt-3">
+          <% @reviews.each do |review| %>
+		      <div class="card-deck col-4 mx-auto mb-3 text-center">
+            <%= link_to souvenir_review_path(review.souvenir, review) do %>
+			      <div class="card h-100 border-secondary btn btn-outline-secondary", style="width:15rem;">
+			        <%= image_tag review.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+			        <div class="card-body">
+				        <h4 class="card-title"><%= review.souvenir.souvenir_name %></h4>
+				        <h6 class="card-subtitle m-2"><%= review.souvenir.prefecture.prefecture_name %></h6>
+				        <p class="card-subtitle m-2"><%= review.review.truncate(20) %> </p>
+              </div>
+			      </div>
+			      <% end %>
+		      </div>
+		      <% end %>
+        </div>
+        
+      <h3 class="m-3">目的別に探す</h3>
       <div class="row">
         <div class="search">
 
-          目的別
-          レビューから探す
-            ＜相手＞
-            ＜目的＞
 
         </div>
       </div>
