--- a/app/views/public/souvenirs/search_sort.html.erb
+++ b/app/views/public/souvenirs/search_sort.html.erb
@@ -13,18 +13,15 @@
       <div class ="m-2 text-right">
         <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
       </div>
+      
       <div class="m-3">
-        <%= form_with model: @souvenir, url: search_sort_path, method: :get do |f| %>
+        <%= form_with url: search_sort_path, method: :get do |f| %>
           <%= f.select :keyword, [ ['ほしい！多い順', 'wants'],
                            ['レビュー多い順', 'reviews'],
                            ['星評価高い順', 'average_star'] ], class: "select-form-control" %>
           <%= f.submit "並び替える", class: "btn btn-outline-primary" %>
         <% end %>
       </div>
-      
-      
-
-
 
       <div class="row">
         <% @souvenirs.each do |souvenir| %>
