--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -32,6 +32,7 @@
 			        <div class="card-body">
 				        <h4 class="card-title"><%= review.souvenir.souvenir_name %></h4>
 				        <h6 class="card-subtitle m-2"><%= review.souvenir.prefecture.prefecture_name %></h6>
+				         <p class="card-subtitle m-2"><%= review.user.nickname %> </p>
 				        <p class="card-subtitle m-2"><%= review.review.truncate(20) %> </p>
               </div>
 			      </div>
@@ -39,7 +40,7 @@
 		      </div>
 		      <% end %>
         </div>
-        
+
       <h3 class="m-3">目的別に探す</h3>
       <div class="row">
         <div class="search">
