--- a/app/views/public/souvenirs/search_sort.html.erb
+++ b/app/views/public/souvenirs/search_sort.html.erb
@@ -6,19 +6,19 @@
 
     <div class="col-8 offset-1 pt-5">
     	<div class="mb-3">
-        <h2 class="text-center">ミヤゲ</h2>
+        <h2 class="text-center">並び替え</h2>
         <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
-      
+
       <div class ="m-2 text-right">
         <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
       </div>
-      
+
       <div class="m-3">
         <%= form_with url: search_sort_path, method: :get do |f| %>
           <%= f.select :keyword, [ ['ほしい！多い順', 'wants'],
-                           ['レビュー多い順', 'reviews'],
-                           ['星評価高い順', 'average_star'] ], class: "select-form-control" %>
+                                 ['レビュー多い順', 'reviews'],
+                                 ['星評価高い順', 'average_star'] ], class: "select-form-control" %>
           <%= f.submit "並び替える", class: "btn btn-outline-primary" %>
         <% end %>
       </div>
