--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -44,7 +44,11 @@
       <h3 class="m-3">目的別に探す</h3>
       <div class="row">
         <div class="search">
-
+          
+          
+          <%= link_to "家族", sort_path %>
+          
+          
 
         </div>
       </div>
