--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -29,6 +29,11 @@
             <td></td>
           </tr>
           <tr>
+            <th class="text-center align-middle">ジャンル</th>
+            <td><%= f.label :tag_name, "スペースを入力することで複数のタグをつけることが可能です。" %>
+                <%= f.text_field :tag_name, value: @tag_list, class: "form-control" %></td>
+          </tr>
+          <tr>
             <th class="text-center align-middle">貰った？贈った？</th>
             <td class="align-middle"><%= f.radio_button :receive_send, "貰う" %>
                 <%= f.label :receive_send_recive, "貰った", class: "mr-3" %>
