--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -44,11 +44,10 @@
       <h3 class="m-3">目的別に探す</h3>
       <div class="row">
         <div class="search">
-          
-          
-          <%= link_to "家族", sort_path %>
-          
-          
+
+          <%= link_to "食品", search_category_path %>
+          <%= link_to "グッズ", search_category_path %>
+
 
         </div>
       </div>
