--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -45,11 +45,55 @@
       <div class="row">
         <div class="search">
 
-          <%= link_to "食品", search_category_path %>
-          <%= link_to "グッズ", search_category_path %>
-
+        <% @review_all.each do |review| %>
+          <% review.tags.each do |tag| %>
+            <% if tag.tag_name.present?%>
+            <span><%= link_to search_sort_path(tag_name: tag.tag_name) do %></span>
+                  <%= tag.tag_name %>
+            <% end %>
+            <% end %>
+          <% end %>
+        <% end %>
 
         </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+      <h3 class="m-3">項目別に探す</h3>
+      <div class="row">
+        <div class="search">
+
+        <% @review_all.each do |review| %>
+
+            <div class="d-flex">
+              <%= link_to search_category_path(people: review.people, usefulness: nil) do %>
+              <div>
+                <%= review.people_i18n %>
+              </div>
+              <% end %>
+              <%= link_to search_category_path(people: nil, usefulness: review.usefulness) do %>
+              <div>
+                <%= review.usefulness_i18n %>
+              </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+
+
+
+
+
       </div>
     </div>
   </div>
