--- a/app/views/public/souvenirs/search_category.html.erb
+++ b/app/views/public/souvenirs/search_category.html.erb
@@ -1,57 +1,10 @@
-<h1>Public::Souvenirs#search_category</h1>
-<p>Find me in app/views/public/souvenirs/search_category.html.erb</p>
-
-
-book_rails.tags.where(name: 'Ruby')
-
-
-
-
-
-
 <div class="container">
   <div class="row">
-    <div class="col-3">
-			<%= render "layouts/prefecture", prefectures: @prefectures %>
-    </div>
+     <% @souvenirs.each do |souvenir| %>
+         <div>
+             <%= souvenir.souvenir_name %>
+         </div>
+     <% end %>
 
-    <div class="col-8 offset-1 pt-5">
-    	<div class="mb-3">
-        <h2 class="text-center"><%=  %>一覧</h2>
-        <p class="text-right mr-5">全 <%= @souvenir.count %> 件</p>
-      </div>
-
-      <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-      </div>
-
-      <div class="row">
-        <% @souvenirs.each do |souvenir| %>
-		    <div class="card-deck col-4 mx-auto mb-3 text-center">
-        <%= link_to souvenir_path(souvenir) do %>
-			    <div class="card h-100 border-secondary btn btn-outline-secondary", style="width:15rem;">
-			      <%= image_tag souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
-			      <div class="card-body">
-				      <h4 class="card-title"><%= souvenir.souvenir_name %></h4>
-				      <h6 class="card-subtitle m-2"><%= souvenir.prefecture.prefecture_name %></h6>
-				      <p class="card-subtitle m-2">ほしい！：<%= souvenir.wants.count %> 件<br>
-				                               		 レビュー：<%= souvenir.reviews.count %> 件</p>
-				      <p class="card-subtitle m-2"><%= render "average_star", souvenir: souvenir %></p>
-				      <p class="card-text mt-3"><%= souvenir.introduction.truncate(30) %></p>
-				      <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------>
-            </div>
-			    </div>
-			  <% end %>
-		    </div>
-		    <% end %>
-	    </div>
-
-	    <div class="text-right">
-      <%= link_to new_souvenir_path, class: "btn btn-outline-dark" do %>
-	      <i class="fa-solid fa-plus fa-2xl"></i>
-      <% end %>
-      </div>
-
-    </div>
   </div>
 </div>
